# gyre

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.cuda118  Dockerfile.devbase  NOTICE  README.md  client.py  environment.yaml  pyproject.toml
.github/workflows/: docker-image.yml
docker_support/: bitsandbytes.sm89.diff  cuda_archs.sh  run.sh
gyre/: cache.py  civitai.py  ckpt_utils.py  constants.py  debug_recorder.py  engines_yaml.py  hints.py  images.py  images_shuffle.py  logging.py  manager.py  match_histograms.py  monitoring_queue.py  patching.py  protobuf_safetensors.py  ram_monitor.py  server.py  torch_safe_unpickler.py  utils.py  wireproxy.py
gyre/config/: dist_hashes  dist_hashes.json  engines.yaml  examples.yaml  limit_vram.yaml  user_tweaks.yaml
gyre/config/engines/: depth.yaml  hintsets-sd21.yaml  hintsets.yaml  inkpunk.yaml  orange.yaml  stable-diffusion-v1-4.yaml  stable-diffusion-v1-5.yaml  stable-diffusion-v2.yaml  upscaler.yaml  waifu.yaml
gyre/config/extras/: chillout.yaml  deliberate.yaml  dreamlike.yaml  fish.yaml  inkpunk.yaml  liberty.yaml  lykon-dream.yaml  mistoon.yaml  orangemix.yaml  realistic-vision.yaml  reality-engine.yaml  waifu.yaml  yuzu-lemon-tea.yaml
gyre/config/models/: clip.yaml  coadapter.yaml  controlnet-11.yaml  controlnet-sd21.yaml  controlnet.yaml  depth.yaml  hinters.yaml  inkpunk.yaml  midas.yaml  orange.yaml  samhq.yaml  t2i.yaml  (+5 more)
gyre/http/: grpc_gateway.py  grpc_gateway_controller.py  json_api_controller.py  reverse_proxy.py  stability_rest_api.py  status_controller.html  status_controller.py
gyre/pipeline/: common_scheduler.py  easing.py  latent_debugger.py  lora.py  lycoris.py  model_loader_base.py  model_utils.py  pipeline_meta.py  pipeline_wrapper.py  prompt_types.py  randtools.py  samplers.py  textual_inversion.py  unified_pipeline.py  upscaler_pipeline.py  xformers_utils.py
gyre/resources/: __init__.py  civitai.py
gyre/services/: engines.py  exception_to_grpc.py  generate.py
gyre/src/: README.md  __init__.py
scripts/: convert_basicsr_model.py  convert_mm_model.py
(+84 files in other folders)
